# dynamic-visual-slam

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  mainpage.dox  package.xml
config/: realsense.rviz
dynamic_visual_slam/: CMakeLists.txt  LICENSE  package.xml
dynamic_visual_slam/config/: realsense.rviz  yolo_ros.rviz
dynamic_visual_slam/include/dynamic_visual_slam/: ORBextractor.hpp  bundle_adjustment.hpp
dynamic_visual_slam/launch/: bag_playback.launch.xml  camera_rviz.launch.xml  yolo_slam.launch.xml
dynamic_visual_slam/src/: ORBextractor.cpp  backend.cpp  feature_detection.cpp  frontend.cpp
dynamic_visual_slam/test/: test_dbow2_integration.cpp
dynamic_visual_slam_interfaces/: CMakeLists.txt  package.xml
dynamic_visual_slam_interfaces/msg/: Keyframe.msg  Landmark.msg  Observation.msg
include/dynamic-visual-slam/: bundle_adjustment.hpp
launch/: camera_rviz.launch.xml
src/: backend.cpp  feature_detection.cpp  processor_node.cpp
